# Comp590-Computer-Vision-Research-Project-

./: .gitignore  README.md  confidence_graph.ipynb  experiment.ipynb  main.py  object_testing.ipynb  pyproject.toml
outputs/results/: results.csv
scripts/: compress.py  detect.py  plot_results.py  run_experiment.py
